neddoc: fix: white text on white background in generated NED source listing
- If NED doc was generated from the IDE using a dark theme the generated
NED source listing was also using a dark theme but the background of the
source listing had always a light background. This made the light text
on the light background unreadable. FIX: use dark background for the listing
in dark mode.

--- a/ui/org.omnetpp.neddoc/src/org/omnetpp/neddoc/templates/material/style.css
+++ b/ui/org.omnetpp.neddoc/src/org/omnetpp/neddoc/templates/material/style.css
@@ -59,6 +59,7 @@ pre.src {
     line-height: 1.3em;
     overflow-x: auto;
 }
+pre.dark-bg { background-color: #202020; }
 .src-keyword { font-weight:bold }
 .src-comment { font-style:italic; color:#404040 }
 .src-string  { color:#006000 }
